create github pages

--- a/page1.html
+++ b/page1.html
@@ -219,7 +219,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #f0ede7;}.display-1{fo
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-4">
                     <p>The design of a project should be creative as well as visually pleasant to the eye. The desing should also not interfere with the user's main tasks. The design will be created with the fact in mind that user's don't want to get easily distracted, but they also need something to keep them intrigued in the project. As always everyone has a different vision, and I am open to see your point of views on design features of a project. The more design features there is to work with the better.&nbsp;</p>
                 </h3>
-                <div class="mbr-section-btn align-center"><a class="btn btn-right-icon btn-white display-4" href="mailto:aaronbroughton86@gmail.com">
+                <div class="mbr-section-btn align-center"><a class="btn btn-right-icon btn-white display-4" href="page2.html">
                     <span class="fa fa-angle-right mbr-iconfont mbr-iconfont-btn"></span>
                     Get Started</a></div>
             </div>
